--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,7 +11,7 @@ on:
 jobs:
 
   build:
-    name: "Build project and deploy"
+    name: 'Build project and deploy'
     runs-on: ubuntu-latest
 
     steps:
@@ -19,6 +19,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: 'Setup Firebase credentials'
         env:
@@ -32,6 +39,19 @@ jobs:
 
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v2
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: |
+          echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: 'Build project'
         run: |
